--- a/app/src/main/res/layout/fragment_transfer_info.xml
+++ b/app/src/main/res/layout/fragment_transfer_info.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -10,13 +9,10 @@
     <!-- Template Skeleton -->
     <include layout="@layout/skeleton" />
 
-    <!-- Profile Content -->
     <ScrollView
-        android:id="@+id/profile_scrollview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
-        android:scrollbarStyle="outsideOverlay"
         app:layout_constraintTop_toBottomOf="@id/header_bg"
         app:layout_constraintBottom_toTopOf="@id/bottom_nav_bg"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,108 +25,90 @@
             android:padding="@dimen/fragment_horizontal_margin">
 
             <TextView
-                android:id="@+id/studentProfileTxt"
+                android:id="@+id/transferTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/spacing_xxlarge"
-                android:text="@string/student_profile_title"
+                android:text="Transfer Information"
                 android:textAlignment="center"
                 android:textColor="@color/brand_red"
                 android:textSize="@dimen/text_size_headline"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/majorTEXT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/major_label"
-                android:textStyle="bold"
-                android:textColor="@color/medium_gray" />
-
-            <Spinner
-                android:id="@+id/spinner_major"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/spinner_height"
-                android:background="@android:drawable/btn_dropdown" />
-
-            <Button
-                android:id="@+id/btn_add_major"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_large"
-                android:text="@string/add_major_button"
-                android:textColor="@color/brand_red"
-                android:textSize="@dimen/text_size_caption" />
-
-            <TextView
-                android:id="@+id/MinorText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/minor_label"
-                android:textStyle="bold"
-                android:textColor="@color/medium_gray" />
-
-            <Spinner
-                android:id="@+id/spinner_minor"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/spinner_height"
-                android:background="@android:drawable/btn_dropdown" />
-
-            <Button
-                android:id="@+id/btn_add_minor"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_large"
-                android:text="@string/add_minor_button"
-                android:textColor="@color/brand_red"
-                android:textSize="@dimen/text_size_caption" />
-
-            <TextView
-                android:id="@+id/graduationDateText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/graduation_date_label"
+                android:text="Previous School"
                 android:textStyle="bold"
                 android:textColor="@color/medium_gray" />
 
             <EditText
-                android:id="@+id/editTextDate"
+                android:id="@+id/edit_previous_school"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/edit_text_height"
+                android:layout_marginBottom="@dimen/spacing_xlarge"
+                android:hint="Enter school name"
+                android:inputType="text"
+                android:importantForAutofill="no"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Incoming Year"
+                android:textStyle="bold"
+                android:textColor="@color/medium_gray" />
+
+            <Spinner
+                android:id="@+id/spinner_incoming_year"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/spinner_height"
+                android:layout_marginBottom="@dimen/spacing_xlarge"
+                android:background="@android:drawable/btn_dropdown" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Credits Transferring In"
+                android:textStyle="bold"
+                android:textColor="@color/medium_gray" />
+
+            <EditText
+                android:id="@+id/edit_transfer_credits"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/edit_text_height"
                 android:layout_marginBottom="@dimen/spacing_xxlarge"
-                android:ems="10"
-                android:hint="@string/date_hint"
+                android:hint="Total credits"
+                android:inputType="number"
                 android:importantForAutofill="no"
-                android:inputType="date"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switch_transfer"
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_large"
-                android:text="@string/transfer_student_prompt"
-                android:textSize="@dimen/text_size_body_1"
+                android:text="Additional Notes"
+                android:textStyle="bold"
                 android:textColor="@color/medium_gray" />
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switch_graduate"
+            <EditText
+                android:id="@+id/edit_transfer_notes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/spacing_xxxlarge"
-                android:text="@string/graduate_student_prompt"
-                android:textSize="@dimen/text_size_body_1"
-                android:textColor="@color/medium_gray" />
+                android:gravity="top"
+                android:hint="Any other relevant details..."
+                android:inputType="textMultiLine"
+                android:lines="4"
+                android:importantForAutofill="no"
+                android:textColor="@color/black" />
 
             <Button
-                android:id="@+id/btn_save_profile"
+                android:id="@+id/btn_save_transfer_info"
                 android:layout_width="@dimen/button_width_regular"
                 android:layout_height="@dimen/button_save_profile_height"
                 android:layout_gravity="center_horizontal"
                 android:backgroundTint="@color/brand_red"
-                android:text="@string/save_profile_button"
+                android:text="Save Transfer Info"
                 android:textColor="@color/white" />
 
         </LinearLayout>
