--- a/app/src/main/res/layout/class_layout.xml
+++ b/app/src/main/res/layout/class_layout.xml
@@ -9,12 +9,39 @@
     <!-- Template Skeleton -->
     <include layout="@layout/skeleton" />
 
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/toggle_major_minor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_medium"
+        app:checkedButton="@id/btn_select_major"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header_bg"
+        app:singleSelection="true">
+
+        <Button
+            android:id="@+id/btn_select_major"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Major" />
+
+        <Button
+            android:id="@+id/btn_select_minor"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Minor" />
+
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
     <!-- Subtitle -->
     <TextView
         android:id="@+id/major_header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/fragment_vertical_margin"
+        android:layout_marginTop="@dimen/spacing_medium"
         android:text="@string/math_major_flowchart_title"
         android:textAlignment="center"
         android:textColor="@color/brand_red"
@@ -22,14 +49,14 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header_bg" />
+        app:layout_constraintTop_toBottomOf="@id/toggle_major_minor" />
 
     <!-- Flowchart Scrollable Container -->
     <ScrollView
         android:id="@+id/verticalScroll"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/spacing_medium"
+        android:layout_marginTop="@dimen/spacing_small"
         android:layout_marginBottom="@dimen/spacing_medium"
         app:layout_constraintBottom_toTopOf="@+id/legendContainer"
         app:layout_constraintEnd_toEndOf="parent"
