--- a/app/src/main/res/layout/fragment_how__to__use.xml
+++ b/app/src/main/res/layout/fragment_how__to__use.xml
@@ -147,7 +147,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_small"
-                android:layout_marginBottom="@dimen/spacing_xxxxlarge"
+                android:layout_marginBottom="@dimen/spacing_xxxlarge"
                 android:text="@string/step_5_text"
                 android:textColor="@color/off_white"
                 android:textSize="@dimen/text_size_caption" />
